# clickhouse-cpp-c-bridge

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: linux.yml  macos.yml  windows.yml
src/: block_wrapper.h  clickhouse-cpp-c-bridge.cpp  clickhouse_error.h  clickhouse_result.h  clickhouse_result_status.h  client_wrapper.h  export.h  main.cpp  query_wrapper.h  utils.h
src/columns/: column_array.h  column_date.h  column_date32.h  column_datetime.h  column_datetime64.h  column_decimal.h  column_enum16.h  column_enum8.h  column_fixed_string.h  column_float32.h  column_float64.h  column_int128.h  column_int16.h  column_int32.h  column_int64.h  column_int8.h  column_ipv4.h  column_ipv6.h  column_low_cardinality.h  column_nullable.h  column_string.h  column_tuple.h  column_uint16.h  column_uint32.h  column_uint64.h  column_uint8.h  column_uuid.h  column_wrapper.h
src/structs/: clickhouse_result_status.h  client_options_wrapper.h  endpoint_wrapper.h  int128_wrapper.h  optional_wrapper.h  server_info_wrapper.h  string_view_wrapper.h  uuid_wrapper.h
tests/: README.md  block_wrapper_tests.cpp  client_wrapper_tests.cpp  query_wrapper_tests.cpp
tests/columns/: column_array_tests.cpp  column_date32_tests.cpp  column_date_tests.cpp  column_datetime64_tests.cpp  column_datetime_tests.cpp  column_decimal_tests.cpp  column_enum16_tests.cpp  column_enum8_tests.cpp  column_fixed_string_tests.cpp  column_float32_tests.cpp  column_float64_tests.cpp  column_int128_tests.cpp  column_int16_tests.cpp  column_int32_tests.cpp  column_int64_tests.cpp  column_int8_tests.cpp  column_ipv4_tests.cpp  column_ipv6_tests.cpp  column_low_cardinality_tests.cpp  column_nullable_tests.cpp  column_string_tests.cpp  column_tuple_tests.cpp  column_uint16_tests.cpp  column_uint32_tests.cpp  column_uint64_tests.cpp  column_uint8_tests.cpp  column_uuid_tests.cpp  column_wrapper_tests.cpp
tests/structs/: clickhouse_result_status_tests.cpp  client_options_wrapper_tests.cpp  endpoint_wrapper_tests.cpp  server_info_wrapper_tests.cpp
